Fixed some spacing issues; Modularized CSS

--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 :root {
     --accent-color: #6e1dd1;
-    --back-color1: #f7f7f7;
+    --back-color: #f7f7f7;
     --header-color: #f7f7f7;
     --header-height: 3rem;
     --shadow-color: #d4d4d4ee;
@@ -16,7 +16,7 @@
 }
 
 body {
-    background-color: var(--back-color1);
+    background-color: var(--back-color);
     color: var(--text-color-dark);
     /* prevents margin collapsing */
     position: absolute;
@@ -155,14 +155,16 @@ a:link, a:visited {
 }
 
 body > main {
-    background-color: var(--back-color1);
+    background-color: var(--back-color);
     margin: 3rem auto 0rem auto;
     width: 70%;
 }
 
 .content {
-    background-color: var(--back-color1);
+    background-color: var(--back-color);
+    margin-bottom: 2rem;
     padding: 2rem;
+    border: solid 2px tomato;
 }
 
 .anchor {
@@ -172,34 +174,34 @@ body > main {
     visibility: hidden;
 }
 
-main h1 {
+.content h1 {
     display: block;
     font-size: 2.5rem;
     text-align: center;
     border: solid 2px tomato;
 }
 
-main h2 {
+.content h2 {
     display: block;
     font-size: 2rem;
     text-align: center;
     border: solid 2px tomato;
 }
 
-main b {
+.content b {
     color: var(--accent-color);
 }
 
 #content1 {
     display: grid;
-    grid-template-columns: 55% 10% 35%;
+    grid-column-gap: 2rem;
+    grid-row-gap: 1rem;
+    grid-template-columns: 60% auto;
     grid-template-rows: auto auto;
-    margin-bottom: 2rem;
-    border: solid 2px tomato;
 }
 
 #content1 > h1, #content1 > .anchor {
-    grid-column: 1 / 4;
+    grid-column: 1 / 3;
     grid-row: 1;
     margin-bottom: 1rem;
 }
@@ -215,35 +217,39 @@ main b {
     border: solid .1rem var(--text-color-dark);
     border-radius: 3rem;
     box-shadow: .4rem .4rem .5rem var(--shadow-color);
-    grid-column: 3;
+    grid-column: 2;
     grid-row: 2;
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;
     border: solid 2px tomato;
 }
 
 #content2 {
     display: grid;
+    grid-row-gap: 2rem;
     grid-template-columns: auto;
     grid-template-rows: auto auto auto auto;
-    border: solid 2px tomato;
 }
 
 #content2 a, #content2 h2 {
     grid-column: 1;
     grid-row: 1;
-    margin-bottom: 2rem;
+    border: solid 2px tomato;
+}
+
+#content2 > .project {
+    display: grid;
+    grid-column-gap: 2rem;
+    grid-row-gap: 1rem;
     border: solid 2px tomato;
 }
 
 #content2 > #tetrow {
-    display: grid;
+    grid-row-gap: 2rem;
+    grid-row-gap: 1rem;
     grid-column 1;
     grid-row: 2;
-    grid-template-columns: auto 10% auto;
+    grid-template-columns: auto auto;
     grid-template-rows: auto;
-    margin-bottom: 1rem;
-    border: solid 2px tomato;
 }
 
 #tetrow > img {
@@ -254,7 +260,7 @@ main b {
 }
 
 #tetrow > div {
-    grid-column: 3;
+    grid-column: 2;
     grid-row:1;
     margin: auto;
     border: solid 2px tomato;
@@ -273,14 +279,21 @@ main b {
     padding-left: 1.25rem;
 }
 
-#content2 > #adventure-rpg{
-    gird-column 1;
+#content2 > #adventure-rpg {
+    grid-column 1;
     grid-row: 3;
+    grid-template-columns: auto 10% auto;
+    grid-template-rows: auto;
+}
+
+#adventure-rpg > #adventure-rpg-images {
+    margin: auto;
     border: solid 2px tomato;
 }
 
-#content2 img {
+#adventure-rpg-images > img {
     border-radius: .5rem;
+    border: solid 2px tomato;
 }
 
 @media screen and (max-width: 1280px) {
@@ -315,7 +328,6 @@ main b {
     #content1 > div {
         grid-column: 1;
         grid-row: 2;
-        margin-bottom: 1rem;
     }
 
     #content1 > img {
@@ -331,12 +343,19 @@ main b {
     #tetrow > img {
         grid-column: 1;
         grid-row: 1;
-        margin-bottom: 1rem;
     }
 
     #tetrow > div {
         grid-column: 1;
         grid-row: 2;
+    }
+
+    #content2 > #adventure-rpg{
+        grid-template-columns: auto;
+        grid-template-rows: auto auto;
+    }
+
+    #adventure-rpg > img {
     }
 }
 
